# startlit

./: 1_Home_Page.py  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: python-publish.yml
pages/: 1_Page_1.py  1_🐍_Page_1.py  2_Page_2.py  3_Page_3.py  4_Page_4.py
src/startlit/: __init__.py  help.py  kill.py  list.py  snowflake.py  start.py
