[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "startlit"
version = "0.0.1"
description = "Get started with a streamlit app template code in style"
authors = ["Indraneel Chakraborty"]
readme = "README.md"
homepage = "https://github.com/ineelhere/startlit"
license = "Apache License - Version 2.0"

[tool.poetry.dependencies]
python = ">=3.8"

[tool.poetry.dev-dependencies]
pytest = ">=7.0" 
twine = ">=4.0.2"

[tool.poetry.scripts]

[tool.poetry.extras]